--- a/_posts/projects/2020-10-02-teaching.md
+++ b/_posts/projects/2020-10-02-teaching.md
@@ -21,4 +21,6 @@ images:
     url: "/assets/images/projects/teaching/mobile.jpg"
     alt: "Yellow Pineapple website on a mobile device"
 ---
+<p style="padding-top:50px">
+
 <p>The pineapple is a herbaceous perennial, which grows to 1.0 to 1.5 m (3.3 to 4.9 ft) tall, although sometimes it can be taller. The plant takes almost three years to reach maturation. It can fruit a total of three times during its lifetime.</p>
