--- a/_posts/projects/2020-10-01-research.md
+++ b/_posts/projects/2020-10-01-research.md
@@ -8,7 +8,7 @@ meta:
 
 project:
   title: "Research"
-  logo: "/assets/images/projects/research/logo.jpg"
+  logo: "/assets/images/projects/research/logo-2-3.png"
 
 images:
   - image:
