--- a/_posts/projects/2020-10-02-teaching.md
+++ b/_posts/projects/2020-10-02-teaching.md
@@ -8,7 +8,7 @@ meta:
 
 project:
   title: "Teaching"
-  logo: "/assets/images/projects/teaching/logo-2-4.png"
+  logo: "/assets/images/projects/teaching/logo.jpg"
 
 images:
   - image:
