--- a/_posts/projects/2020-10-01-research.md
+++ b/_posts/projects/2020-10-01-research.md
@@ -13,14 +13,14 @@ project:
 
 images:
   - image:
-    url: "/assets/images/projects/research/caldeirao.jpg"
-    alt: "Red Pineapple website on tablet, mobile and desktop"
+    url: "/assets/images/projects/research/house.jpg"
+    alt: "House, Sitio do Moco by Otavio Nogueira"
   - image:
-    url: "/assets/images/projects/research/house.png"
-    alt: "Red Pineapple website on a desktop device"
+    url: "/assets/images/projects/research/gado.png"
+    alt: "Gado by Otavio Nogueira"
   - image:
-    url: "/assets/images/projects/research/tatu.jpg"
-    alt: "Red Pineapple website on a mobile device"
+    url: "/assets/images/projects/research/field-8.jpg"
+    alt: "Field research"
 ---
 <p style="padding-top:50px">
 
