--- a/_posts/projects/2020-10-02-teaching.md
+++ b/_posts/projects/2020-10-02-teaching.md
@@ -13,14 +13,14 @@ project:
 
 images:
   - image:
-    url: "/assets/images/projects/teaching/devices.jpg"
-    alt: "Yellow Pineapple website on tablet, mobile and desktop"
+    url: "/assets/images/projects/teaching/bird_parna.png"
+    alt: "Bird, Serra da Capivara National Park by Otavio Nogueira"
   - image:
     url: "/assets/images/projects/teaching/confuses.jpg"
-    alt: "Yellow Pineapple website on a desktop device"
+    alt: "Serra das Confusões National Park by Otavio Nogueira"
   - image:
-    url: "/assets/images/projects/teaching/mobile.jpg"
-    alt: "Yellow Pineapple website on a mobile device"
+    url: "/assets/images/projects/teaching/pda-talk.png.jpg"
+    alt: "Talk - land managers"
 ---
 <p style="padding-top:50px">
 
